--- a/l10n_chart_cl/i18n/nl.po
+++ b/l10n_chart_cl/i18n/nl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:15+0000\n"
-"PO-Revision-Date: 2013-11-12 02:07+0000\n"
+"PO-Revision-Date: 2013-11-12 20:04+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,21 +17,21 @@ msgstr ""
 "X-Launchpad-Export-Date: 2013-11-13 05:44+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
-#. module: l10n_ar
-#: model:ir.module.module,description:l10n_ar.module_meta_information
+#. module: l10n_cl
+#: model:ir.module.module,description:l10n_cl.module_meta_information
 msgid ""
 "\n"
-"    Argentinian Accounting : chart of Account\n"
+"    Chilean Accounting : chart of Account\n"
 "    "
 msgstr ""
 
-#. module: l10n_ar
-#: model:ir.module.module,shortdesc:l10n_ar.module_meta_information
-msgid "Argentinian Chart of Account"
+#. module: l10n_cl
+#: model:ir.module.module,shortdesc:l10n_cl.module_meta_information
+msgid "Chilean Chart of Account"
 msgstr ""
 
-#. module: l10n_ar
-#: model:ir.actions.todo,note:l10n_ar.config_call_account_template_in_minimal
+#. module: l10n_cl
+#: model:ir.actions.todo,note:l10n_cl.config_call_account_template_in_minimal
 msgid ""
 "Generate Chart of Accounts from a Chart Template. You will be asked to pass "
 "the name of the company, the chart template to follow, the no. of digits to "
