--- a/account_payment/i18n/pl.po
+++ b/account_payment/i18n/pl.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0dev\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-05-09 10:18+0000\n"
-"PO-Revision-Date: 2011-01-19 12:00+0000\n"
-"Last-Translator: OpenERP Administrators <Unknown>\n"
+"PO-Revision-Date: 2013-11-15 15:03+0000\n"
+"Last-Translator: Mirosław Bojanowicz <miroslaw.bojanowicz@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-28 07:47+0000\n"
-"X-Generator: Launchpad (build 15864)\n"
+"X-Launchpad-Export-Date: 2013-11-16 06:01+0000\n"
+"X-Generator: Launchpad (build 16831)\n"
 
 #. module: account_payment
 #: field:payment.order,date_scheduled:0
@@ -51,6 +51,12 @@ msgid ""
 "* a basic mechanism to easily plug various automated payment.\n"
 "    "
 msgstr ""
+"\n"
+"Ten moduł dostarcza :\n"
+"* bardziej efektywny sposób zarządzania płatnościami faktur.\n"
+"* podstawowy mechanizm do łatwego wprowadzania rozmaitych automatycznych "
+"płatności.\n"
+"    "
 
 #. module: account_payment
 #: field:payment.order,line_ids:0
@@ -82,7 +88,7 @@ msgid ""
 "minus the amount which is already in payment order"
 msgstr ""
 "Kwota, która powinna być zapłacona w bieżącym dniu\n"
-"minus kwota, która już jest w poleceniu przelewu"
+"minus kwota, która już jest w poleceniu płatności"
 
 #. module: account_payment
 #: field:payment.line,company_id:0
@@ -116,12 +122,12 @@ msgstr "Stosowane konta"
 #: field:payment.line,ml_maturity_date:0
 #: field:payment.order.create,duedate:0
 msgid "Due Date"
-msgstr "Data zapłaty"
+msgstr "Termin płatności"
 
 #. module: account_payment
 #: constraint:account.move.line:0
 msgid "You can not create move line on closed account."
-msgstr ""
+msgstr "Nie możesz utworzyć przesunięcia na zamkniętym koncie."
 
 #. module: account_payment
 #: view:account.move.line:0
@@ -239,8 +245,9 @@ msgstr "Informacja transakcji"
 #: model:ir.ui.menu,name:account_payment.menu_action_payment_mode_form
 #: view:payment.mode:0
 #: view:payment.order:0
+#: field:payment.order,mode:0
 msgid "Payment Mode"
-msgstr "Sposób zapłaty"
+msgstr "Sposób płatności"
 
 #. module: account_payment
 #: field:payment.line,ml_date_created:0
@@ -303,7 +310,7 @@ msgstr "Konto docelowe"
 #. module: account_payment
 #: view:payment.order:0
 msgid "Search Payment Orders"
-msgstr "Szukaj poleceń zapłaty"
+msgstr "Szukaj poleceń płatności"
 
 #. module: account_payment
 #: field:payment.line,create_date:0
@@ -382,7 +389,7 @@ msgstr "Polecenie płatności"
 #. module: account_payment
 #: help:payment.mode,name:0
 msgid "Mode of Payment"
-msgstr "Sposób zapłaty"
+msgstr "Sposób płatności"
 
 #. module: account_payment
 #: report:payment.order:0
@@ -424,7 +431,7 @@ msgstr "Adres zamawiającego klienta."
 #. module: account_payment
 #: view:account.payment.populate.statement:0
 msgid "Populate Statement:"
-msgstr ""
+msgstr "Wypełnij oświadczenie:"
 
 #. module: account_payment
 #: view:account.move.line:0
@@ -454,7 +461,7 @@ msgstr "Pozycje zapisów"
 #. module: account_payment
 #: constraint:account.move.line:0
 msgid "Company must be same for its related account and period."
-msgstr ""
+msgstr "Firma musi odpowiednia do konta i okresu."
 
 #. module: account_payment
 #: help:payment.line,move_line_id:0
@@ -472,6 +479,7 @@ msgstr "Szukaj"
 #. module: account_payment
 #: model:ir.actions.report.xml,name:account_payment.payment_order1
 #: model:ir.model,name:account_payment.model_payment_order
+#: view:payment.order:0
 msgid "Payment Order"
 msgstr "Polecenie płatności"
 
@@ -518,7 +526,7 @@ msgstr "Klient zamawiający"
 #. module: account_payment
 #: model:ir.model,name:account_payment.model_account_payment_make_payment
 msgid "Account make payment"
-msgstr ""
+msgstr "Wykonaj płatność"
 
 #. module: account_payment
 #: report:payment.order:0
@@ -565,7 +573,6 @@ msgstr "Komunikacja"
 #. module: account_payment
 #: view:account.payment.make.payment:0
 #: view:account.payment.populate.statement:0
-#: view:payment.order:0
 #: view:payment.order.create:0
 msgid "Cancel"
 msgstr "Anuluj"
@@ -642,12 +649,12 @@ msgstr "Waluta firmy"
 #: view:payment.line:0
 #: view:payment.order:0
 msgid "Payment"
-msgstr "Płatności"
+msgstr "Płatność"
 
 #. module: account_payment
 #: report:payment.order:0
 msgid "Payment Order / Payment"
-msgstr "Polecenie zapłaty / Płatność"
+msgstr "Polecenie płatności / Płatność"
 
 #. module: account_payment
 #: field:payment.line,move_line_id:0
@@ -687,7 +694,7 @@ msgstr ""
 #. module: account_payment
 #: field:payment.line,order_id:0
 msgid "Order"
-msgstr "Kolejność"
+msgstr "Polecenie"
 
 #. module: account_payment
 #: field:payment.order,total:0
@@ -710,14 +717,14 @@ msgstr "Partner"
 #. module: account_payment
 #: model:ir.actions.act_window,name:account_payment.action_create_payment_order
 msgid "Populate Payment"
-msgstr ""
+msgstr "Przenieś płatność"
 
 #. module: account_payment
 #: help:payment.mode,bank_id:0
 msgid "Bank Account for the Payment Mode"
-msgstr "Konto bankowe dla sposobu zapłaty"
+msgstr "Konto bankowe dla sposobu płatności"
 
 #. module: account_payment
 #: constraint:account.move.line:0
 msgid "You can not create move line on view account."
-msgstr ""
+msgstr "Nie możesz tworzyć przesunięć w widoku konta."
