--- a/product/i18n/fi.po
+++ b/product/i18n/fi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-11-26 18:00+0000\n"
+"PO-Revision-Date: 2013-12-01 21:43+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-27 05:39+0000\n"
-"X-Generator: Launchpad (build 16845)\n"
+"X-Launchpad-Export-Date: 2013-12-02 05:52+0000\n"
+"X-Generator: Launchpad (build 16856)\n"
 
 #. module: product
 #: field:product.packaging,rows:0
@@ -541,8 +541,7 @@ msgstr ""
 msgid ""
 "Error: The default Unit of Measure and the purchase Unit of Measure must be "
 "in the same category."
-msgstr ""
-"Virhe: oletusyksikkö ja hankintayksikkö pitää kuulua samaan kategoriaan."
+msgstr "Virhe: oletusyksikkö ja ostoksikkö pitää kuulua samaan kategoriaan."
 
 #. module: product
 #: model:ir.model,name:product.model_product_uom_categ
@@ -1243,7 +1242,7 @@ msgstr "Lukemattomia viestejä"
 #: model:ir.actions.act_window,name:product.product_uom_categ_form_action
 #: model:ir.ui.menu,name:product.menu_product_uom_categ_form_action
 msgid "Unit of Measure Categories"
-msgstr "Yksiköiden kategoriat"
+msgstr "Mittayksiköiden kategoriat"
 
 #. module: product
 #: help:product.product,seller_id:0
@@ -1511,7 +1510,7 @@ msgstr "cm"
 #. module: product
 #: model:ir.model,name:product.model_product_uom
 msgid "Product Unit of Measure"
-msgstr "Tuotteen yksikkö"
+msgstr "Tuoteyksikkö"
 
 #. module: product
 #: model:ir.actions.act_window,help:product.product_pricelist_action
@@ -1608,7 +1607,7 @@ msgstr "Hinnaston nimi"
 #. module: product
 #: model:product.category,name:product.product_category_1
 msgid "Saleable"
-msgstr "Myytävissä oleva"
+msgstr "Myytä"
 
 #. module: product
 #: sql_constraint:product.uom:0
