--- a/purchase/i18n/ro.po
+++ b/purchase/i18n/ro.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-30 13:12+0000\n"
+"PO-Revision-Date: 2013-12-01 09:33+0000\n"
 "Last-Translator: Dorin <dhongu@gmail.com>\n"
 "Language-Team: Romanian <ro@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-12-01 05:45+0000\n"
+"X-Launchpad-Export-Date: 2013-12-02 05:52+0000\n"
 "X-Generator: Launchpad (build 16856)\n"
 
 #. module: purchase
@@ -254,7 +254,7 @@ msgstr "Daca este selectat, mesajele noi necesita atentia dumneavoastra."
 #: model:process.node,name:purchase.process_node_packinglist0
 #: model:process.node,name:purchase.process_node_productrecept0
 msgid "Incoming Products"
-msgstr "Recepție prduse"
+msgstr "Recepție produse"
 
 #. module: purchase
 #: view:purchase.order:0
