--- a/sale/i18n/fi.po
+++ b/sale/i18n/fi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-12 08:55+0000\n"
+"PO-Revision-Date: 2013-12-01 21:41+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-21 06:33+0000\n"
-"X-Generator: Launchpad (build 16831)\n"
+"X-Launchpad-Export-Date: 2013-12-02 05:52+0000\n"
+"X-Generator: Launchpad (build 16856)\n"
 
 #. module: sale
 #: model:ir.model,name:sale.model_account_config_settings
@@ -1040,6 +1040,20 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                Klikkaa luodaksesi tarjouksen.\n"
+"              </p><p>\n"
+"                OpenERP auttaa käsittelemään kokonaista myyntiprosessia:\n"
+"                tarjouksesta tilaukseen, toimituksen,  laskutuksen ja\n"
+"                suoritusten perinnän.\n"
+"              </p><p>\n"
+"                The social feature helps you organize discussions on each "
+"sales\n"
+"                order, and allow your customers to keep track of the "
+"evolution\n"
+"                of the sales order.\n"
+"              </p>\n"
+"            "
 
 #. module: sale
 #: selection:sale.order.line,type:0
