--- a/account/i18n/fi.po
+++ b/account/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-12-01 22:14+0000\n"
+"PO-Revision-Date: 2013-12-02 20:58+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-12-02 05:51+0000\n"
+"X-Launchpad-Export-Date: 2013-12-03 06:15+0000\n"
 "X-Generator: Launchpad (build 16856)\n"
 
 #. module: account
@@ -8086,7 +8086,7 @@ msgstr ""
 #. module: account
 #: model:ir.ui.menu,name:account.menu_manual_reconcile
 msgid "Manual Reconciliation"
-msgstr "Käsin tehty täsmäytys"
+msgstr "Manuaalinen täsmäytys"
 
 #. module: account
 #: report:account.overdue:0
@@ -11043,7 +11043,7 @@ msgstr "Hae tilipohjia"
 #. module: account
 #: view:account.invoice.tax:0
 msgid "Manual Invoice Taxes"
-msgstr "Laskuta verot manuaalisesti"
+msgstr "Manuaaliset laskun verot"
 
 #. module: account
 #: code:addons/account/account_invoice.py:573
