--- a/sale/i18n/fi.po
+++ b/sale/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-12-01 21:41+0000\n"
+"PO-Revision-Date: 2013-12-02 21:54+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-12-02 05:52+0000\n"
+"X-Launchpad-Export-Date: 2013-12-03 06:16+0000\n"
 "X-Generator: Launchpad (build 16856)\n"
 
 #. module: sale
@@ -176,7 +176,7 @@ msgstr "Määrittele myyntitili tälle tuotteelle: \"%s\" (id:%d)."
 #: view:sale.report:0
 #: field:sale.report,price_total:0
 msgid "Total Price"
-msgstr "Hinta yhteensä"
+msgstr "Kokonaishinta"
 
 #. module: sale
 #: field:sale.config.settings,group_invoice_so_lines:0
@@ -375,7 +375,7 @@ msgstr ""
 "                Klikkaa luodaksesi uuden tarjouksen, jonka voi muuttaa\n"
 "                myyntitilaukseksi.\n"
 "              </p><p>\n"
-"                OpenERP auttaa sinua tehokkaasti hoitamaan  koko myynti-\n"
+"                OpenERP auttaa sinua tehokkaasti hoitamaan  koko myynti\n"
 "                prosessin:  tarjous, myyntitilaus, toimitus, laskutus ja "
 "maksu.\n"
 "              </p>\n"
@@ -449,7 +449,7 @@ msgstr "Syyskuu"
 #. module: sale
 #: field:sale.order,fiscal_position:0
 msgid "Fiscal Position"
-msgstr "Taloudellinen tilanne"
+msgstr "Verokanta"
 
 #. module: sale
 #: help:sale.advance.payment.inv,advance_payment_method:0
@@ -522,7 +522,7 @@ msgid ""
 "There is no Fiscal Position defined or Income category account defined for "
 "default properties of Product categories."
 msgstr ""
-"Taloudellista tilannetta ei ole määritelty tai oletusmyyntitiliä määritelty "
+"Verokantaa tai tulotilin kategoriaa ei ole määritelty oletukseksi "
 "tuotekategorioille."
 
 #. module: sale
@@ -841,6 +841,22 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                Klikkaa luodaksesi tarjouksen tai myyntitilauksen tälle "
+"asikkaalle. \n"
+"              </p><p>\n"
+"                OpenERP auttaa tehokkaasti käsittelemään koko "
+"myyntiprosessia:\n"
+"                tarjousten tekoa, myyntitilauksia, toimittamista, laskutusta "
+"ja\n"
+"                maksamista.\n"
+"              </p><p>\n"
+"                Some-toiminnallisuus auttaa sinus organisoimaan keskustelut\n"
+"                kunkin tilauksen osalta ja sallii asiakkaasi seuraavan "
+"myyntitilauksen\n"
+"                kehittymistä.\n"
+"              </p>\n"
+"            "
 
 #. module: sale
 #: model:ir.actions.act_window,name:sale.action_orders
