--- a/stock/i18n/fi.po
+++ b/stock/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-12-01 21:13+0000\n"
+"PO-Revision-Date: 2013-12-02 06:01+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-12-02 05:52+0000\n"
+"X-Launchpad-Export-Date: 2013-12-03 06:16+0000\n"
 "X-Generator: Launchpad (build 16856)\n"
 
 #. module: stock
@@ -1653,7 +1653,7 @@ msgstr "Jaa"
 #. module: stock
 #: model:ir.actions.report.xml,name:stock.report_picking_list_out
 msgid "Delivery Slip"
-msgstr "Lähetyslista"
+msgstr "Lähetysluettelo"
 
 #. module: stock
 #: model:ir.actions.act_window,name:stock.open_board_warehouse
@@ -4880,7 +4880,7 @@ msgstr "Vaihtoehtoinen: seuraava varastonsiirto kun ketjutetaan"
 #. module: stock
 #: view:stock.picking.out:0
 msgid "Print Delivery Slip"
-msgstr "Tulosta lähetyslista"
+msgstr "Tulosta lähetysluettelo"
 
 #. module: stock
 #: view:report.stock.inventory:0
